--- a/styles/style.css
+++ b/styles/style.css
@@ -1,55 +1,3 @@
-html {
-  font-size: 10px; /* px means 'pixels': the base font size is now 10 pixels high  */
-  font-family: 'Open Sans', sans-serif; /* this should be the rest of the output you got from Google fonts */
-}
-
-body {
-  width: 800px;
-  margin: 0 auto;
-  background-color: #ccffec;
-  padding: 0 20px 20px 20px;
-  border: 5px solid #032d1e;
-}
-
-h3 {
-  font-size: 40px;
+p{
   text-align: center;
-  margin: 0;
-  padding: 20px 0;
-  color: #0d6847;
-  text-shadow: 2px 2px 1px gray;
-}
-h1 {
-  font-size: 20px;
-  text-align: center;
-  margin: auto;
-  padding: 20px 0;
-}
-
-p, li {
-  font-size: 16px;
-  line-height: 2;
-  letter-spacing: 1px;
-}
-
-img {
-  display: block;
-  margin: 0 auto;
-}
-
-button {
-  display: block;
-  margin: 0 auto;
-}
-
-.column {
-  float: left;
-  width: 50%;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
 }
